# data-intelligence

./: 49949230861  README.md  pyproject.toml
data_intelligence/: __init__.py
data_intelligence/infraction_index_engine/: engine.py
data_intelligence/infraction_index_engine/ml_solutions/system_analyzer/: IncrementalIsolationForest.py  __init__.py  model.py  preprocess.py  query.py  state_mapper.txt
data_intelligence/infraction_index_engine/ml_solutions/visual_telemetry/model/: gemini.py
data_intelligence/infraction_index_engine/productivity_forecast/model/: predictor.py
data_intelligence/models/: Process.py
monitoria_data_intelligence.egg-info/: PKG-INFO  SOURCES.txt
tests/system_analyzer/: processes.csv  system_analyzer.py
