[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "monitoria_data_intelligence"
version = "0.0.1"
authors = [{name = "Eduardo Costa Amex Macal", email = "eduardocosta942z@gmail.com"}]
description = "Centralizes the MonitorIA data and intelligence layer, including visual telemetry AI, real-time process monitoring, predictive and historical analysis, score integration, and productivity metrics, exposed as an SDK for backend consumption, supporting automated decisions, dashboards, and alerts."
readme = "README.md"
license = {file = "LICENSE"}
dependencies = []